--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learning Platform - Interactive Books</title>
+    <title>STAR-SHAIGAN LEARNING PORTAL - Interactive Books</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -15,7 +15,7 @@
             <div class="nav-content">
                 <div class="nav-brand">
                     <i class="fas fa-book-open"></i>
-                    <span>Learning Platform</span>
+                    <span>STAR-SHAIGAN LEARNING PORTAL</span>
                 </div>
                 <div class="nav-menu">
                     <button class="nav-btn" onclick="showSection('library')">
