--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="glass-card login-card">
                 <div class="login-header">
                     <i class="fas fa-book-reader"></i>
-                    <h1>Learning Platform</h1>
+                    <h1>STAR-SHAIGAN LEARNING PORTAL</h1>
                     <p>Interactive Book Learning Experience</p>
                 </div>
                 <div class="login-tabs">
